# wikiAgent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: apply-watchtower.yml  ci.yml  consolidation-nightly.yml  health-check.yml  inspect-vps.yml  prep-prod.yml
dashboard/: README.md  index.html
docs/: ECOSYSTEM.md  PHASE1-PLAN.md  ROADMAP-3.0.html  SECURITY.md
scripts/: run_consolidation.py
tests/: test_admin_envelope.py  test_consolidation.py  test_fact_crud.py  test_injection.py  test_knowledge_extractor.py  test_notify.py  test_query_log.py  test_rag.py  test_ratelimit.py  test_reranker.py  test_review_fixes.py  test_whatsapp.py  test_wiki_search.py
tests/fixtures/: conversations.json
tests/integration/: README.md  conftest.py  test_api_mcp_e2e.py  test_e2e.py
whatsapp-agent/: .env.example  README.md  knowledge_pipeline.js  package.json
wiki_agent/: __init__.py  app.py  config.py  consolidation.py  embeddings.py  fact_crud.py  knowledge_extractor.py  mcp_server.py  notify.py  qdrant_helper.py  query_log.py  rag.py  ratelimit.py  reranker.py  whatsapp.py  wiki_search.py
